--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,14 @@
 
         <activity android:name=".OrderDetail"></activity>
 
+        <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/panaderia" />
+        Set color used with incoming notification messages. This is used when no color is set for the incoming notification message. -->
+        <!--<meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorAccent" /> -->
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
